<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localityName"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/locality"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordinates"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/coordinates"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/temperature"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/pressure"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_sun"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>